# hackattic

./: .gitignore  README.md
a_global_presence/src/: main.rs
backup_restore/: Cargo.toml
backup_restore/src/: main.rs
brute_force_zip/: Cargo.toml
brute_force_zip/src/: main.rs  pass_find.rs  pass_gen.rs
challenges/a_global_presence/: Cargo.toml
challenges/a_global_presence/src/: main.rs
challenges/backup_restore/: Cargo.toml
challenges/backup_restore/src/: main.rs
challenges/brute_force_zip/: Cargo.toml
challenges/brute_force_zip/src/: main.rs
challenges/dockerized_solutions/: Cargo.toml
challenges/dockerized_solutions/src/: main.rs
challenges/help_me_unpack/: Cargo.toml
challenges/help_me_unpack/src/: main.rs
challenges/jotting_jwts/: Cargo.toml
challenges/jotting_jwts/src/: main.rs
challenges/mini_miner/: Cargo.toml
challenges/mini_miner/src/: main.rs
challenges/password_hashing/: Cargo.toml
challenges/password_hashing/src/: main.rs
challenges/reading_qr/: Cargo.toml
challenges/reading_qr/src/: main.rs
challenges/tales_of_ssl/src/: main.rs
challenges/touch_tone_dialing/: Cargo.toml
challenges/touch_tone_dialing/src/: dtmf.rs  main.rs
challenges/util/: Cargo.toml
challenges/util/src/: lib.rs
challenges/websocket_chit_chat/: Cargo.toml
challenges/websocket_chit_chat/src/: main.rs
help_me_unpack/: Cargo.toml
help_me_unpack/src/: main.rs
jotting_jwts/: Cargo.toml
jotting_jwts/src/: main.rs
mini_miner/: Cargo.toml
mini_miner/src/: main.rs
password_hashing/: Cargo.toml
password_hashing/src/: main.rs
reading_qr/: Cargo.toml
reading_qr/src/: main.rs
tales_of_ssl/: Cargo.toml
tales_of_ssl/src/: main.rs
util/src/: lib.rs
