[package]
name = "reading_qr"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.6"
reqwest = { version = "0.12.20", features = ["json"] }
rqrr = "0.9.3"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
util = { path = "../util" }