[package]
name = "brute_force_zip"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 3
overflow-checks = false

[dependencies]
itertools = "0.14.0"
rayon = "1.10.0"
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
util = { path = "../util" }
zip = "4.2.0"
