[package]
name = "dockerized_solutions"
version = "0.1.0"
edition = "2024"

[dependencies]
ngrok = "0.15.0"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.0", features = ["full"] }
url = "2.5.4"
util = { path = "../util" }
