[package]
name = "jotting_jwts"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
jsonwebtoken = "9.3.1"
ngrok = "0.15.0"
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
url = "2.5.4"
util = { path = "../util" }
