[package]
name = "websocket_chit_chat"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3.31"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.0", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
util = { path = "../util" }
